clap_derive/tests/ui/subcommand_and_flatten.stderr
error: subcommand, flatten and skip cannot be used together
  --> $DIR/subcommand_and_flatten.rs:16:24
   |
16 |     #[clap(subcommand, flatten)]
   |                        ^^^^^^^

error[E0277]: the trait bound `MakeCookie: std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not satisfied
  --> $DIR/subcommand_and_flatten.rs:11:10
   |
11 | #[derive(Clap, Debug)]
   |          ^^^^ the trait `std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not implemented for `MakeCookie`
